--- a/client/src/styles/layout/Footer.scss
+++ b/client/src/styles/layout/Footer.scss
@@ -4,3 +4,15 @@
   font-size: 1.125em;
   padding: 0.4em 0.2em;
 }
+
+@media (min-width: 1024px) {
+  .footer {
+    font-size: 1.25em;
+  }
+}
+
+@media (min-width: 1440px) {
+  .footer {
+    font-size: 1.5em;
+  }
+}
