--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,5 +1,4 @@
-$amantahPurple: #a63a50;
-$antiqueWhite: #f0e7d8;
-$cinerous: #ab9b96;
-$brownSugar: #a1674a;
-$oldRose: #ba6e6e;
+$backgroundBlack: #2e2e2d;
+$hoverColor: #f1c709;
+$inputHover: #d8bd51;
+$color404: #ceb037b4;
