--- a/client/src/styles/layout/Navbar.scss
+++ b/client/src/styles/layout/Navbar.scss
@@ -5,13 +5,17 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: $backgroundBlack;
+  color: #fff;
+  padding: 0.5em 0em;
   .title-and-hamburger {
     display: flex;
     align-items: center;
     font-size: 1.5em;
-    font-weight: 600;
+    font-weight: 500;
     .nav-title {
       padding: 0 0.5em;
+      color: $hoverColor;
     }
     .show-ham {
       visibility: visible;
@@ -31,20 +35,21 @@
     height: 0em;
     transition: 0.2s ease-in-out;
     .nav-item {
-      color: black;
+      color: #fff;
       text-decoration: none;
       padding: 0.5em 0em;
       font-size: 1.125em;
       transition: 0.125s ease-out;
       &:hover {
         transform: scale(1.125);
-        color: #f1c709;
+        color: $hoverColor;
       }
     }
   }
   .logout {
     border: none;
-    background-color: white;
+    background-color: transparent;
+    color: inherit;
     height: inherit;
     font-size: inherit;
     padding: 0.5em 0em;
@@ -52,7 +57,7 @@
     transition: 0.125s ease-out;
     &:hover {
       transform: scale(1.125);
-      color: #f1c709;
+      color: $hoverColor;
     }
   }
 }
@@ -66,6 +71,7 @@
   visibility: hidden;
   opacity: 0;
   transition: 0.2s ease-in-out;
+  height: 0;
 }
 
 .opened {
@@ -87,7 +93,8 @@
       }
     }
     .logout {
-      margin: 0.5em 3em;
+      margin: 0em 4.25em;
+      font-size: 1.25em;
     }
     .links {
       display: flex;
@@ -100,7 +107,6 @@
       font-size: 1.25em;
       transition: 0.2s ease-in-out;
       .nav-item {
-        color: black;
         text-decoration: none;
         padding: 0.5em 1em;
         font-size: 1.125em;
@@ -110,5 +116,6 @@
   .hide {
     visibility: visible;
     opacity: 1;
+    height: inherit;
   }
 }
