--- a/client/src/styles/pages/Homepage.scss
+++ b/client/src/styles/pages/Homepage.scss
@@ -28,6 +28,9 @@
 @media (min-width: 1024px) {
   .homepage {
     padding: 0em 5em;
+    .hero-text {
+      padding: 0 1.5em;
+    }
   }
 }
 
@@ -35,6 +38,7 @@
   .homepage {
     .hero-text {
       font-size: 1.5em;
+      padding: 0 3em;
     }
   }
 }
