--- a/client/src/styles/pages/Login.scss
+++ b/client/src/styles/pages/Login.scss
@@ -1,3 +1,4 @@
+@import "../variables";
 .login {
   display: flex;
   flex-direction: column;
@@ -7,42 +8,44 @@
   .error {
     transform: translateY(-2em);
     font-size: 1.2em;
+    margin: 0em 0.25em;
+    text-align: center;
     background-color: rgba(247, 96, 96, 0.938);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     color: white;
     padding: 0.5em 1.25em;
   }
-  .success {
-    transform: translateY(-2em);
-    font-size: 1.2em;
-    background-color: rgba(125, 201, 125, 0.938);
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    color: white;
-    padding: 0.5em 1.25em;
-  }
-  .email,
-  .password {
+  form {
     display: flex;
-    justify-content: flex-start;
-    margin: 1.5em 0em;
-    input {
-      font-size: 1.25em;
-      border: none;
-      position: relative;
-      border-bottom: 0.05em solid black;
-      outline: none;
-      &:focus {
-        & + span {
-          transform: translateY(-1.5em);
-          opacity: 1;
-          font-size: 0.75em;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .email,
+    .password {
+      display: flex;
+      justify-content: flex-start;
+      margin: 1.5em 0em;
+      input {
+        font-size: 1.25em;
+        border: none;
+        position: relative;
+        border-bottom: 0.05em solid black;
+        outline: none;
+        &:focus {
+          & + span {
+            transform: translateY(-1.5em);
+            opacity: 1;
+            font-size: 0.75em;
+          }
+          border-color: $inputHover;
         }
-      }
-      &:valid {
-        & + span {
-          transform: translateY(-1.5em);
-          opacity: 1;
-          font-size: 0.75em;
+        &:valid {
+          & + span {
+            transform: translateY(-1.5em);
+            opacity: 1;
+            font-size: 0.75em;
+          }
+          border-color: $inputHover;
         }
       }
     }
@@ -59,9 +62,10 @@
     background-color: white;
     border: none;
     font-size: 1.25em;
+    transition: 0.125s ease-in-out;
     &:hover {
-      text-decoration: line-through;
-      text-decoration-color: red;
+      color: $hoverColor;
+      font-size: 1.3em;
     }
   }
 }
