--- a/client/src/styles/pages/Register.scss
+++ b/client/src/styles/pages/Register.scss
@@ -1,3 +1,4 @@
+@import "../variables";
 .register {
   display: flex;
   flex-direction: column;
@@ -7,54 +8,67 @@
   .error {
     transform: translateY(-2em);
     font-size: 1.2em;
+    margin: 0em 0.25em;
+    text-align: center;
     background-color: rgba(247, 96, 96, 0.938);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     color: white;
+    text-align: center;
     padding: 0.5em 1.25em;
   }
   .success {
     transform: translateY(-2em);
     font-size: 1.2em;
+    text-align: center;
+    margin: 0em 0.25em;
     background-color: rgba(125, 201, 125, 0.938);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     color: white;
     padding: 0.5em 1.25em;
   }
-  .email,
-  .last-name,
-  .first-name,
-  .first-password,
-  .second-password {
+  form {
     display: flex;
-    justify-content: flex-start;
-    margin: 1.5em 0em;
-    input {
-      font-size: 1.25em;
-      border: none;
-      position: relative;
-      border-bottom: 0.05em solid black;
-      outline: none;
-      &:focus {
-        & + span {
-          transform: translateY(-1.5em);
-          opacity: 1;
-          font-size: 0.75em;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .email,
+    .last-name,
+    .first-name,
+    .first-password,
+    .second-password {
+      display: flex;
+      justify-content: flex-start;
+      margin: 1.5em 0em;
+      input {
+        font-size: 1.25em;
+        border: none;
+        position: relative;
+        border-bottom: 0.05em solid black;
+        outline: none;
+        &:focus {
+          & + span {
+            transform: translateY(-1.5em);
+            opacity: 1;
+            font-size: 0.75em;
+          }
+          border-color: $inputHover;
+        }
+        &:valid {
+          & + span {
+            transform: translateY(-1.5em);
+            opacity: 1;
+            font-size: 0.75em;
+          }
+          border-color: $inputHover;
         }
       }
-      &:valid {
-        & + span {
-          transform: translateY(-1.5em);
-          opacity: 1;
-          font-size: 0.75em;
-        }
+      span {
+        transition: 0.2s ease-in-out;
+        position: absolute;
+        opacity: 0.7;
+        font-size: 1.25em;
+        pointer-events: none;
       }
-    }
-    span {
-      transition: 0.2s ease-in-out;
-      position: absolute;
-      opacity: 0.7;
-      font-size: 1.25em;
-      pointer-events: none;
     }
   }
   button {
@@ -62,9 +76,10 @@
     background-color: white;
     border: none;
     font-size: 1.25em;
+    transition: 0.2s ease-in-out;
     &:hover {
-      text-decoration: line-through;
-      text-decoration-color: red;
+      color: $hoverColor;
+      font-size: 1.3em;
     }
   }
 }
